--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.1",
     "next": "11.1.2",
+    "node-sass": "^4.14.1",
     "react": "17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
