Create api endpoint api/photos/random

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=14.x"
+  },
   "dependencies": {
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
