implement search photos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "paths": {
       "@assets/*": ["assets/*"],
       "@components/*": ["components/*"],
+      "@services/*": ["services/*"],
+      "@models/*": ["models/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
