--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
     "node-sass": "^4.14.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.4",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react": "17.0.24",
+    "@types/react-infinite-scroll-component": "^5.0.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.3"
